# upscalerr

./: .gitignore
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/capture/: dx12_cuda_interop.cu  dx12_cuda_interop.h  wgc_capture.cpp  wgc_capture.h
backend/src/inference/: framegen_pipeline.cu  framegen_pipeline.h  trt_engine.cpp  trt_engine.h  upscale_pipeline.cu  upscale_pipeline.h
backend/src/ipc/: pipe_server.cpp  pipe_server.h  protocol.h
backend/src/kernels/: bilinear_warp.cu  blend_output.cu  color_convert.cu  pixel_shuffle.cu
backend/src/presentation/: vk_cuda_interop.cu  vk_cuda_interop.h  vulkan_swapchain.cpp  vulkan_swapchain.h
engine/: build_engines.bat  build_engines.py  help.txt  help_utf8.txt
engine/profiles/: espcn_2x_fp16.engine  espcn_timing.cache  flownet_timing.cache
scripts/: run.bat  setup_env.bat
training/: export_onnx.py  requirements.txt  train_espcn.py  train_flownet.py
training/datasets/: __init__.py  flow_dataset.py  upscale_dataset.py
training/losses/: __init__.py  charbonnier.py  perceptual.py
training/models/: __init__.py  espcn.py  flownet.py
ui/: ipc_client.py  main.py  main_window.py
ui/resources/: style.qss
upscalerr/: README.md  pyproject.toml  requirements.txt
upscalerr/checkpoints/espcn/: espcn_epoch_1.pt  espcn_epoch_10.pt  espcn_epoch_2.pt  espcn_epoch_3.pt  espcn_epoch_4.pt  espcn_epoch_5.pt  espcn_epoch_6.pt  espcn_epoch_7.pt  espcn_epoch_8.pt  espcn_epoch_9.pt
upscalerr/configs/: default.yaml  espcn_train.yaml  flownet_train.yaml
upscalerr/models/onnx/: espcn_2x.onnx.data
upscalerr/tests/: test_color_convert.py  test_cuda_array_view.py  test_framegen_sequence.py
upscalerr/tools/: build_engines.py  export_game_frames.py  profile_pipeline.py
upscalerr/upscalerr/: __init__.py  __main__.py
upscalerr/upscalerr/app/: bootstrap.py  lifecycle.py
upscalerr/upscalerr/capture/: cuda_frame_view.py  dxcam_grabber.py  window_target.py
upscalerr/upscalerr/gpu/: color_convert.py  cuda_graph_pipeline.py  device_context.py  frame_buffer_pool.py
upscalerr/upscalerr/inference/: espcn_engine.py  flownet_engine.py  motion_warp.py  trt_executor.py  trt_runtime.py
upscalerr/upscalerr/pipeline/: frame_state.py  framegen_sequencer.py  inference_worker.py
upscalerr/upscalerr/presentation/: cuda_gl_interop.py  gl_frame_widget.py  overlay_window.py  present_scheduler.py
upscalerr/upscalerr/ui/: game_picker_dialog.py  main_window.py
upscalerr/upscalerr/ui/resources/: style.qss
upscalerr/upscalerr/util/: env.py  tensor_layout.py  timing.py  win32.py
