[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upscalerr"
version = "1.0.0"
description = "Pure-Python real-time game upscaler and frame generation (Lossless Scaling style)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "tensorrt>=10.0.0",
    "dxcam>=0.0.5",
    "PySide6>=6.6.0",
    "PyOpenGL>=3.1.7",
    "PyOpenGL-accelerate>=3.1.7",
    "pycuda>=2024.1",
    "numpy>=1.24.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.17.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
train = ["torchvision>=0.17.0", "scikit-image>=0.22.0"]

[project.scripts]
upscalerr = "upscalerr.__main__:main"
upscalerr-gui = "upscalerr.__main__:main"
train-espcn = "training.train_espcn:main"
train-flownet = "training.train_flownet:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["upscalerr*", "training*"]
